Use Collection API methods (#20833)
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>